// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-media-folder should create a folder at root level 1`] = `
{
  "content": [],
  "structuredContent": {
    "id": "00000000-0000-0000-0000-000000000000",
    "message": "Media folder "_Test Folder Created" created successfully",
    "name": "_Test Folder Created",
  },
}
`;

exports[`create-media-folder should create a folder inside another folder 1`] = `
{
  "content": [],
  "structuredContent": {
    "id": "00000000-0000-0000-0000-000000000000",
    "message": "Media folder "_Test Nested Folder" created successfully",
    "name": "_Test Nested Folder",
  },
}
`;

exports[`create-media-folder should handle non-existent parent ID 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "Error creating media folder: Request failed with status code 404",
  },
}
`;
